# ska-tango-testing

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG  CODEOWNERS  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: refactor.drawio  requirements.txt
docs/src/: conf.py  index.rst
docs/src/api/: index.rst
docs/src/guide/: index.rst  mock_consumers.rst
docs/src/guide/harness/: index.rst  tango_contexts.rst  tango_test_harnesses.rst
docs/src/guide/integration/: advanced_use_cases.rst  custom_queries_and_assertions.rst  event_logger.rst  getting_started.rst  index.rst
src/ska_tango_testing/: __init__.py  callable.py  consumer.py  context.py  harness.py
src/ska_tango_testing/integration/: __init__.py  asserions_utils.py  assertions.py  assertions_utils.py  event.py  event_query.py  event_storage.py  events_query.py  events_storage.py  logger.py  predicates.py  queries.py  received_event.py  subscriber.py  subscription_manager.py  tango_event_assertions.py  tango_event_logger.py  tango_event_predicates.py  tango_event_tracer.py  tango_event_tracer_assertions.py  tango_event_tracer_predicates.py  tracer.py  typed_event.py
src/ska_tango_testing/integration/assertions/: __init__.py  early_stop.py  has_hasnt_events.py  legacy.py  timeout.py
src/ska_tango_testing/integration/event/: __init__.py  base.py  storage.py  subscriber.py  typed.py
src/ska_tango_testing/integration/predicates_and_assertions/: __init__.py  event_assertions.py  predicates.py
src/ska_tango_testing/integration/query/: __init__.py  base.py  n_events_match.py  n_state_changes.py  with_fail_condition.py
src/ska_tango_testing/mock/: __init__.py  callable.py  consumer.py  placeholders.py
src/ska_tango_testing/mock_callback/: __init__.py  callback.py  callback_group.py  callback_queue_protocol.py  queue_group.py
src/ska_tango_testing/mock_consumer/: __init__.py  consumer.py  producer_protocol.py
src/ska_tango_testing/tango/: event_callback.py
tests/: __init__.py  pytest.ini
tests/functional/: __init__.py
tests/unit/: __init__.py  test_context.py  test_version.py
tests/unit/callable/: conftest.py  test_callable.py  test_callable_group.py
tests/unit/consumer/: __init__.py  conftest.py  test_consumer_group.py
tests/unit/event_tracer/: __init__.py  conftest.py  test_assertions.py  test_assertions_utils.py  test_event_query.py  test_events_query.py  test_events_storage.py  test_predicates.py  test_queries.py  test_subscriber.py  test_subscription_manager.py  test_tango_event_logger.py  test_tango_event_tracer.py  test_typed_events.py
tests/unit/mock_callback/: __init__.py  conftest.py  test_callback.py  test_callback_group.py  test_documentation_examples.py  test_queue_group.py
tests/unit/mock_consumer/: conftest.py  test_consumer.py  test_consumer_group.py
tests/unit/tango/: __init__.py  conftest.py  test_tango_event_callback_group.py
(+31 files in other folders)
