[tool.poetry]
name = "ska-tango-testing"
version = "0.7.3"
description = "Test harness for testing SKA Tango devices"
authors = ["Drew Devereux <drew.devereux@csiro.au>"]
license = "BSD 3-clause new license"
packages = [
    { include = "ska_tango_testing", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
pytango = ">=9.4.2 <11.0.0"
numpy = "^1.23.2"
assertpy = "^1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
darglint = "^1.8.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
mypy = "^1.10"
pylint = "~2.12"
pylint-junit = "^0.3.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.1"
ska-ser-sphinx-theme = "^0.1.3"
typing-extensions = "^4.11.0"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
